[package]
name = "wgpu-pong"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bytemuck = { version = "1.22.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.6"
glyphon = "0.8.0"
log = "0.4.26"
palette = "0.7.6"
pollster = "0.4.0"
wgpu = "24.0.1"
winit = "0.30.9"

[lints.clippy]
unwrap_used = "deny"
